less/components/program-committee.less
/*!
 * Copyright (c) 2021 Eclipse Foundation, Inc.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * Contributors:
 *   Martin Lowe <martin.lowe@eclipse-foundation.org>
 *
 * SPDX-License-Identifier: EPL-2.0
*/

section#program-committee {
  .program-committee-background-short {
    background: url(/images/host-banner.jpg) no-repeat center top;
    position: absolute;
    background-size: cover;
    height: 350px;
    width: 100%;
  }
  .program-committee-background {
    background: url(/images/host-banner.jpg) no-repeat center top;
    position: absolute;
    background-size: cover;
    height: 500px;
    width: 100%;
  }
  .eclipsefdn-user-display-heading h2 {
    color: @brand-primary;
    margin-bottom: 40px;
  }
  .eclipsefdn-user-display-heading p {
    color: @white;
  }
}

